@@ -179,14 +179,22 @@ setMainValue (const char *pname, const char *pvalue)
 }
 
 void
-buildCmdLine2 (char *pbuffer, const char *pcmd, size_t len)
+buildCmdLine2 (char *pbuffer, size_t len, const char *pcmd, ...)
 {
+  va_list ap;
   char *poutcmd;
+
   assert(pbuffer && pcmd);
   assert(_mainValues);
 
-  poutcmd = msprintf(_mainValues, pcmd);
+  va_start(ap, pcmd);
+
+  poutcmd = mvsprintf(_mainValues, pcmd, ap);
+
+  va_end(ap);
+
   strncpyz(pbuffer, poutcmd, len);
+  Safe_free(poutcmd);
 }
 
 void
